// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inkling GraphQL server Should create 5 User 1 Journal 1 Inklings 1`] = `
{
  "data": {
    "commitInklings": [
      {
        "journalId": "1",
        "text": "User1 Inkling1 Journal1",
        "timeId": 1684220400000,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling2 Journal1",
        "timeId": 1684220400001,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling3 Journal1",
        "timeId": 1684220400002,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling4 Journal1",
        "timeId": 1684220400003,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling5 Journal1",
        "timeId": 1684220400004,
      },
    ],
  },
}
`;

exports[`Inkling GraphQL server Should create 5 User 1 Journal 2 Inklings 1`] = `
{
  "data": {
    "commitInklings": [
      {
        "journalId": "2",
        "text": "User1 Inkling6 Journal2",
        "timeId": 1684220410000,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling7 Journal2",
        "timeId": 1684220410001,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling3 Journal2",
        "timeId": 1684220410002,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling9 Journal2",
        "timeId": 1684220410003,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling10 Journal2",
        "timeId": 1684220410004,
      },
    ],
  },
}
`;

exports[`Inkling GraphQL server Should create 5 more User 1 Journal 1 Inklings 1`] = `
{
  "data": {
    "commitInklings": [
      {
        "journalId": "1",
        "text": "User1 Inkling6 Journal1",
        "timeId": 1684220410000,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling7 Journal1",
        "timeId": 1684220410001,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling8 Journal1",
        "timeId": 1684220410002,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling9 Journal1",
        "timeId": 1684220410003,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling10 Journal1",
        "timeId": 1684220410004,
      },
    ],
  },
}
`;

exports[`Inkling GraphQL server Should create 5 more User 1 Journal 1 Inklings 2`] = `
{
  "data": null,
  "errors": [
    {
      "extensions": {
        "code": "UNAUTHENTICATED",
      },
      "locations": [
        {
          "column": 17,
          "line": 2,
        },
      ],
      "message": "you must be logged in to query this schema",
      "path": [
        "commitInklings",
      ],
    },
  ],
}
`;

exports[`Inkling GraphQL server Should create 5 more User 1 Journal 1 Inklings 3`] = `
{
  "data": null,
  "errors": [
    {
      "extensions": {
        "code": "UNAUTHENTICATED",
      },
      "locations": [
        {
          "column": 17,
          "line": 2,
        },
      ],
      "message": "you must be logged in to query this schema",
      "path": [
        "inklings",
      ],
    },
  ],
}
`;

exports[`Inkling GraphQL server Should create 5 more User 1 Journal 1 Inklings 4`] = `
{
  "data": null,
  "errors": [
    {
      "extensions": {
        "code": "UNAUTHENTICATED",
      },
      "locations": [
        {
          "column": 17,
          "line": 2,
        },
      ],
      "message": "you must be logged in to query this schema",
      "path": [
        "inklings",
      ],
    },
  ],
}
`;

exports[`Inkling GraphQL server Should create User 1 Journal 1 1`] = `
{
  "data": {
    "createJournal": {
      "id": "1",
      "name": "1",
      "userId": "1",
    },
  },
}
`;

exports[`Inkling GraphQL server Should create User 1 Journal 2 1`] = `
{
  "data": {
    "createJournal": {
      "id": "2",
      "name": "2",
      "userId": "1",
    },
  },
}
`;

exports[`Inkling GraphQL server Should create User 2 Journal 3 1`] = `
{
  "data": {
    "createJournal": {
      "id": "3",
      "name": "3",
      "userId": "2",
    },
  },
}
`;

exports[`Inkling GraphQL server Should create User 2 Journal 3 Inklings 1`] = `
{
  "data": {
    "commitInklings": [
      {
        "journalId": "3",
        "text": "User2 Inkling1 Journal3",
        "timeId": 1684220410000,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling2 Journal3",
        "timeId": 1684220410001,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling3 Journal3",
        "timeId": 1684220410002,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling4 Journal3",
        "timeId": 1684220410003,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling5 Journal3",
        "timeId": 1684220410004,
      },
    ],
  },
}
`;

exports[`Inkling GraphQL server Should fail to get any User 1 Journal 1 Inklings before they are made 1`] = `
{
  "data": {
    "inklings": [],
  },
}
`;

exports[`Inkling GraphQL server Should fail to get any User1 Journal1 Inklings as User2 1`] = `
{
  "data": {
    "inklings": [],
  },
}
`;

exports[`Inkling GraphQL server Should fail to get any User1 Journal2 Inklings as User2 1`] = `
{
  "data": {
    "inklings": [],
  },
}
`;

exports[`Inkling GraphQL server Should fail to get any User2 Journal3 Inklings before they are made 1`] = `
{
  "data": {
    "inklings": [],
  },
}
`;

exports[`Inkling GraphQL server Should get 5 User 1 Journal 1 Inklings 1`] = `
{
  "data": {
    "inklings": [
      {
        "journalId": "1",
        "text": "User1 Inkling1 Journal1",
        "timeId": 1684220400000,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling2 Journal1",
        "timeId": 1684220400001,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling3 Journal1",
        "timeId": 1684220400002,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling4 Journal1",
        "timeId": 1684220400003,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling5 Journal1",
        "timeId": 1684220400004,
      },
    ],
  },
}
`;

exports[`Inkling GraphQL server Should get 5 User 1 Journal 2 Inklings 1`] = `
{
  "data": {
    "inklings": [
      {
        "journalId": "2",
        "text": "User1 Inkling6 Journal2",
        "timeId": 1684220410000,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling7 Journal2",
        "timeId": 1684220410001,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling3 Journal2",
        "timeId": 1684220410002,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling9 Journal2",
        "timeId": 1684220410003,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling10 Journal2",
        "timeId": 1684220410004,
      },
    ],
  },
}
`;

exports[`Inkling GraphQL server Should get 5 User 2 Journal 3 Inklings 1`] = `
{
  "data": {
    "inklings": [
      {
        "journalId": "3",
        "text": "User2 Inkling1 Journal3",
        "timeId": 1684220410000,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling2 Journal3",
        "timeId": 1684220410001,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling3 Journal3",
        "timeId": 1684220410002,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling4 Journal3",
        "timeId": 1684220410003,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling5 Journal3",
        "timeId": 1684220410004,
      },
    ],
  },
}
`;

exports[`Inkling GraphQL server Should get 10 User 1 Journal 1 Inklings 1`] = `
{
  "data": {
    "inklings": [
      {
        "journalId": "1",
        "text": "User1 Inkling1 Journal1",
        "timeId": 1684220400000,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling2 Journal1",
        "timeId": 1684220400001,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling3 Journal1",
        "timeId": 1684220400002,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling4 Journal1",
        "timeId": 1684220400003,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling5 Journal1",
        "timeId": 1684220400004,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling6 Journal1",
        "timeId": 1684220410000,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling7 Journal1",
        "timeId": 1684220410001,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling8 Journal1",
        "timeId": 1684220410002,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling9 Journal1",
        "timeId": 1684220410003,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling10 Journal1",
        "timeId": 1684220410004,
      },
    ],
  },
}
`;

exports[`Inkling GraphQL server Should get no User 1 Journal 2 Inklings (since none have been made yet) 1`] = `
{
  "data": {
    "inklings": [],
  },
}
`;

exports[`Inkling GraphQL server Should still fail to get any User1 Journal1 Inklings as User2 1`] = `
{
  "data": {
    "inklings": [],
  },
}
`;

exports[`Inkling GraphQL server Should still fail to get any User1 Journal2 Inklings as User2 1`] = `
{
  "data": {
    "inklings": [],
  },
}
`;
